dynamic forms elements in order

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,3 +29,50 @@
 
 en:
   hello: "Hello world"
+  common:
+    solve: "Solve"
+    statement: "Statement"
+    question: "Question"
+    suggestion: "Suggestion"
+    add_elements: "Add Elements"
+    add_statement: "Add Statement"
+    add_question: "Add Question"
+    add_suggestion: "Add Suggestion"
+    add_video: "Add Video"
+    add_image: "Add Image"
+    add_texte: "Add Text"
+    statement_placeholder: "Enter statement content"
+    question_placeholder: "Enter question content"
+    suggestion_placeholder: "Enter suggestion content"
+    texte_placeholder: "Enter text content"
+    alternative_placeholder: "Enter alternative content"
+    alternative_correct: "Correct answer"
+    submit_answers: "Submit Answers"
+    results: "Results"
+    show_answers: "Show Detailed Feedback"
+    retry: "Try Again"
+    save: "Save"
+    description: "Description"
+    video: "Video"
+    image: "Image"
+    texte: "Text"
+    edit: "Edit"
+    delete: "Delete"
+    edit_description: "Edit Description"
+    edit_video: "Edit Video"
+    edit_image: "Edit Image"
+    edit_texte: "Edit Text"
+    add_description: "Add Description"
+    add_alternative: "Add Alternative"
+    no_description: "No description available."
+    no_video: "No video available."
+    no_image: "No image available."
+    no_texte: "No text available."
+    no_statements: "No statements available."
+    no_questions: "No questions available."
+    no_suggestions: "No suggestions available."
+    no_alternatives: "No alternatives available."
+    confirm_delete: "Are you sure you want to delete this item?"
+    confirm_delete_video: "Are you sure you want to delete this video?"
+    confirm_delete_image: "Are you sure you want to delete this image?"
+    confirm_delete_texte: "Are you sure you want to delete this text?"
