no more double scss css

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -97,6 +97,24 @@ fr:
     question_placeholder: "Saisissez la question ici..."
     alternative_placeholder: "Saisissez l'alternative ici..."
     alternative_correct: "C'est la bonne réponse"
+    solve: "Résoudre"
+    add_elements: "Ajouter des éléments"
+    submit_answers: "Soumettre les réponses"
+    results: "Résultats"
+    show_answers: "Afficher les commentaires détaillés"
+    retry: "Réessayer"
+    no_description: "Aucune description disponible."
+    no_video: "Aucune vidéo disponible."
+    no_image: "Aucune image disponible."
+    no_texte: "Aucun texte disponible."
+    no_statements: "Aucun énoncé disponible."
+    no_questions: "Aucune question disponible."
+    no_suggestions: "Aucune suggestion disponible."
+    no_alternatives: "Aucune alternative disponible."
+    confirm_delete: "Êtes-vous sûr de vouloir supprimer cet élément ?"
+    confirm_delete_video: "Êtes-vous sûr de vouloir supprimer cette vidéo ?"
+    confirm_delete_image: "Êtes-vous sûr de vouloir supprimer cette image ?"
+    confirm_delete_texte: "Êtes-vous sûr de vouloir supprimer ce texte ?"
     
   # Mensagens flash
   flash:
